--- a/强化学习笔记/12_PPO.ipynb
+++ b/强化学习笔记/12_PPO.ipynb
@@ -11,7 +11,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "12"
+    }
+   },
    "outputs": [],
    "source": [
     "import gymnasium as gym\n",
@@ -40,7 +44,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "class PolicyNet(torch.nn.Module):\n",
@@ -66,7 +74,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "class PolicyNetContinuous(torch.nn.Module):\n",
@@ -96,7 +108,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "class ValueNet(torch.nn.Module):\n",
@@ -121,7 +137,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "class PPO:\n",
@@ -246,7 +266,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -295,7 +319,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "def read_ckp(ckp_path):\n",
@@ -324,7 +352,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "CKP_PATH = 'checkpoints/PPO_CPv1.pt'\n",
@@ -442,7 +474,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "2"
+    }
+   },
    "outputs": [],
    "source": [
     "class PPOcontinuous:\n",
@@ -535,7 +571,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "2"
+    }
+   },
    "outputs": [],
    "source": [
     "# PPO相关\n",
@@ -575,7 +615,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "2"
+    }
+   },
    "outputs": [],
    "source": [
     "CKP_PATH = 'checkpoints/PPO_PDv1.pt'\n",
@@ -592,7 +636,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": ""
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
