修改一个错误注释

--- a/机器学习笔记/10_Keras人工神经网络.ipynb
+++ b/机器学习笔记/10_Keras人工神经网络.ipynb
@@ -460,7 +460,7 @@
    "outputs": [],
    "source": [
     "model.compile(loss='sparse_categorical_crossentropy',  # 也可以写 loss = keras.losses.sparse_categorical_crossentropy\n",
-    "             optimizer='sgd',  # optimizer = keras.optimizer.SGD(lr=0.01)  可以指定学习率\n",
+    "             optimizer='sgd',  # optimizer = keras.optimizers.SGD(lr=0.01)  可以指定学习率\n",
     "             metrics=['accuracy'])  # metrics = keras.metrics.sparse_categorical_accuracy, 在分类器训练评估中测量'accuracy'很有用"
    ]
   },
