Changes to be committed: 增加笔记

--- a/强化学习笔记/16_行为预测控制.ipynb
+++ b/强化学习笔记/16_行为预测控制.ipynb
@@ -56,11 +56,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "还需要在后面定义一个`fake_env`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "\n",
+    "\n",
+    "class Swish(nn.Module):\n",
+    "    ''' Swish激活函数 '''\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return x * torch.sigmoid(x)\n",
+    "\n",
+    "\n",
+    "def init_weights(m):\n",
+    "    ''' 初始化模型权重 '''\n",
+    "    def truncated_normal_init(t, mean=0.0, std=0.01):\n",
+    "        torch.nn.init.normal_(t, mean=mean, std=std)\n",
+    "        while True:\n",
+    "            cond = (t < mean - 2 * std) | (t > mean + 2 * std)\n",
+    "            if not torch.sum(cond):\n",
+    "                break\n",
+    "            t = torch.where(\n",
+    "                cond,\n",
+    "                torch.nn.init.normal_(torch.ones(t.shape, device=device),\n",
+    "                                      mean=mean,\n",
+    "                                      std=std), t)\n",
+    "        return t\n",
+    "\n",
+    "    if type(m) == nn.Linear or isinstance(m, FCLayer):\n",
+    "        truncated_normal_init(m.weight, std=1 / (2 * np.sqrt(m._input_dim)))\n",
+    "        m.bias.data.fill_(0.0)\n",
+    "\n",
+    "\n",
+    "class FCLayer(nn.Module):\n",
+    "    ''' 集成之后的全连接层 '''\n",
+    "    def __init__(self, input_dim, output_dim, ensemble_size, activation):\n",
+    "        super(FCLayer, self).__init__()\n",
+    "        self._input_dim, self._output_dim = input_dim, output_dim\n",
+    "        self.weight = nn.Parameter(\n",
+    "            torch.Tensor(ensemble_size, input_dim, output_dim).to(device))\n",
+    "        self._activation = activation\n",
+    "        self.bias = nn.Parameter(\n",
+    "            torch.Tensor(ensemble_size, output_dim).to(device))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self._activation(\n",
+    "            torch.add(torch.bmm(x, self.weight), self.bias[:, None, :]))"
+   ]
   }
  ],
  "metadata": {
