Changes to be committed: 增加笔记

--- a/强化学习笔记/16_行为预测控制.ipynb
+++ b/强化学习笔记/16_行为预测控制.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "不建议运行，消耗时间很大\n",
+    "\n",
+    "> 通过学习与实践，我们可以看出模型预测控制（MPC）方法有着其独特的优势，例如它不用构建和训练策略，可以更好地利用环境，可以进行更长步数的规划。但是 MPC 也有其局限性，例如模型在多步推演之后的准确性会大大降低，简单的控制策略对于复杂系统可能不够。MPC 还有一个更为严重的问题，即每次计算动作的复杂度太大，这使其在一些策略及时性要求较高的系统中应用就变得不太现实。"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": ""
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,6 +124,341 @@
     "        return self._activation(\n",
     "            torch.add(torch.bmm(x, self.weight), self.bias[:, None, :]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EnsembleModel(nn.Module):\n",
+    "    ''' 环境模型集成 '''\n",
+    "    def __init__(self,\n",
+    "                 state_dim,\n",
+    "                 action_dim,\n",
+    "                 ensemble_size=5,\n",
+    "                 learning_rate=1e-3):\n",
+    "        super(EnsembleModel, self).__init__()\n",
+    "        # 输出包括均值和方差,因此是状态与奖励维度之和的两倍\n",
+    "        self._output_dim = (state_dim + 1) * 2\n",
+    "        self._max_logvar = nn.Parameter((torch.ones(\n",
+    "            (1, self._output_dim // 2)).float() / 2).to(device),\n",
+    "                                        requires_grad=False)\n",
+    "        self._min_logvar = nn.Parameter((-torch.ones(\n",
+    "            (1, self._output_dim // 2)).float() * 10).to(device),\n",
+    "                                        requires_grad=False)\n",
+    "\n",
+    "        self.layer1 = FCLayer(state_dim + action_dim, 200, ensemble_size,\n",
+    "                              Swish())\n",
+    "        self.layer2 = FCLayer(200, 200, ensemble_size, Swish())\n",
+    "        self.layer3 = FCLayer(200, 200, ensemble_size, Swish())\n",
+    "        self.layer4 = FCLayer(200, 200, ensemble_size, Swish())\n",
+    "        self.layer5 = FCLayer(200, self._output_dim, ensemble_size,\n",
+    "                              nn.Identity())\n",
+    "        self.apply(init_weights)  # 初始化环境模型中的参数\n",
+    "        self.optimizer = torch.optim.Adam(self.parameters(), lr=learning_rate)\n",
+    "\n",
+    "    def forward(self, x, return_log_var=False):\n",
+    "        ret = self.layer5(self.layer4(self.layer3(self.layer2(\n",
+    "            self.layer1(x)))))\n",
+    "        mean = ret[:, :, :self._output_dim // 2]\n",
+    "        # 在PETS算法中,将方差控制在最小值和最大值之间\n",
+    "        logvar = self._max_logvar - F.softplus(\n",
+    "            self._max_logvar - ret[:, :, self._output_dim // 2:])\n",
+    "        logvar = self._min_logvar + F.softplus(logvar - self._min_logvar)\n",
+    "        return mean, logvar if return_log_var else torch.exp(logvar)\n",
+    "\n",
+    "    def loss(self, mean, logvar, labels, use_var_loss=True):\n",
+    "        inverse_var = torch.exp(-logvar)\n",
+    "        if use_var_loss:\n",
+    "            mse_loss = torch.mean(torch.mean(torch.pow(mean - labels, 2) *\n",
+    "                                             inverse_var,\n",
+    "                                             dim=-1),\n",
+    "                                  dim=-1)\n",
+    "            var_loss = torch.mean(torch.mean(logvar, dim=-1), dim=-1)\n",
+    "            total_loss = torch.sum(mse_loss) + torch.sum(var_loss)\n",
+    "        else:\n",
+    "            mse_loss = torch.mean(torch.pow(mean - labels, 2), dim=(1, 2))\n",
+    "            total_loss = torch.sum(mse_loss)\n",
+    "        return total_loss, mse_loss\n",
+    "\n",
+    "    def train(self, loss):\n",
+    "        self.optimizer.zero_grad()\n",
+    "        loss += 0.01 * torch.sum(self._max_logvar) - 0.01 * torch.sum(\n",
+    "            self._min_logvar)\n",
+    "        loss.backward()\n",
+    "        self.optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EnsembleDynamicsModel:\n",
+    "    ''' 环境模型集成,加入精细化的训练 '''\n",
+    "    def __init__(self, state_dim, action_dim, num_network=5):\n",
+    "        self._num_network = num_network\n",
+    "        self._state_dim, self._action_dim = state_dim, action_dim\n",
+    "        self.model = EnsembleModel(state_dim,\n",
+    "                                   action_dim,\n",
+    "                                   ensemble_size=num_network)\n",
+    "        self._epoch_since_last_update = 0\n",
+    "\n",
+    "    def train(self,\n",
+    "              inputs,\n",
+    "              labels,\n",
+    "              batch_size=64,\n",
+    "              holdout_ratio=0.1,\n",
+    "              max_iter=20):\n",
+    "        # 设置训练集与验证集\n",
+    "        permutation = np.random.permutation(inputs.shape[0])\n",
+    "        inputs, labels = inputs[permutation], labels[permutation]\n",
+    "        num_holdout = int(inputs.shape[0] * holdout_ratio)\n",
+    "        train_inputs, train_labels = inputs[num_holdout:], labels[num_holdout:]\n",
+    "        holdout_inputs, holdout_labels = inputs[:\n",
+    "                                                num_holdout], labels[:\n",
+    "                                                                     num_holdout]\n",
+    "        holdout_inputs = torch.from_numpy(holdout_inputs).float().to(device)\n",
+    "        holdout_labels = torch.from_numpy(holdout_labels).float().to(device)\n",
+    "        holdout_inputs = holdout_inputs[None, :, :].repeat(\n",
+    "            [self._num_network, 1, 1])\n",
+    "        holdout_labels = holdout_labels[None, :, :].repeat(\n",
+    "            [self._num_network, 1, 1])\n",
+    "\n",
+    "        # 保留最好的结果\n",
+    "        self._snapshots = {i: (None, 1e10) for i in range(self._num_network)}\n",
+    "\n",
+    "        for epoch in itertools.count():\n",
+    "            # 定义每一个网络的训练数据\n",
+    "            train_index = np.vstack([\n",
+    "                np.random.permutation(train_inputs.shape[0])\n",
+    "                for _ in range(self._num_network)\n",
+    "            ])\n",
+    "            # 所有真实数据都用来训练\n",
+    "            for batch_start_pos in range(0, train_inputs.shape[0], batch_size):\n",
+    "                batch_index = train_index[:, batch_start_pos:batch_start_pos +\n",
+    "                                          batch_size]\n",
+    "                train_input = torch.from_numpy(\n",
+    "                    train_inputs[batch_index]).float().to(device)\n",
+    "                train_label = torch.from_numpy(\n",
+    "                    train_labels[batch_index]).float().to(device)\n",
+    "\n",
+    "                mean, logvar = self.model(train_input, return_log_var=True)\n",
+    "                loss, _ = self.model.loss(mean, logvar, train_label)\n",
+    "                self.model.train(loss)\n",
+    "\n",
+    "            with torch.no_grad():\n",
+    "                mean, logvar = self.model(holdout_inputs, return_log_var=True)\n",
+    "                _, holdout_losses = self.model.loss(mean,\n",
+    "                                                    logvar,\n",
+    "                                                    holdout_labels,\n",
+    "                                                    use_var_loss=False)\n",
+    "                holdout_losses = holdout_losses.cpu()\n",
+    "                break_condition = self._save_best(epoch, holdout_losses)\n",
+    "                if break_condition or epoch > max_iter:  # 结束训练\n",
+    "                    break\n",
+    "\n",
+    "    def _save_best(self, epoch, losses, threshold=0.1):\n",
+    "        updated = False\n",
+    "        for i in range(len(losses)):\n",
+    "            current = losses[i]\n",
+    "            _, best = self._snapshots[i]\n",
+    "            improvement = (best - current) / best\n",
+    "            if improvement > threshold:\n",
+    "                self._snapshots[i] = (epoch, current)\n",
+    "                updated = True\n",
+    "        self._epoch_since_last_update = 0 if updated else self._epoch_since_last_update + 1\n",
+    "        return self._epoch_since_last_update > 5\n",
+    "\n",
+    "    def predict(self, inputs, batch_size=64):\n",
+    "        mean, var = [], []\n",
+    "        for i in range(0, inputs.shape[0], batch_size):\n",
+    "            input = torch.from_numpy(\n",
+    "                inputs[i:min(i +\n",
+    "                             batch_size, inputs.shape[0])]).float().to(device)\n",
+    "            cur_mean, cur_var = self.model(input[None, :, :].repeat(\n",
+    "                [self._num_network, 1, 1]),\n",
+    "                                           return_log_var=False)\n",
+    "            mean.append(cur_mean.detach().cpu().numpy())\n",
+    "            var.append(cur_var.detach().cpu().numpy())\n",
+    "        return np.hstack(mean), np.hstack(var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FakeEnv:\n",
+    "    def __init__(self, model):\n",
+    "        self.model = model\n",
+    "\n",
+    "    def step(self, obs, act):\n",
+    "        inputs = np.concatenate((obs, act), axis=-1)\n",
+    "        ensemble_model_means, ensemble_model_vars = self.model.predict(inputs)\n",
+    "        ensemble_model_means[:, :, 1:] += obs.numpy()\n",
+    "        ensemble_model_stds = np.sqrt(ensemble_model_vars)\n",
+    "        ensemble_samples = ensemble_model_means + np.random.normal(\n",
+    "            size=ensemble_model_means.shape) * ensemble_model_stds\n",
+    "\n",
+    "        num_models, batch_size, _ = ensemble_model_means.shape\n",
+    "        models_to_use = np.random.choice(\n",
+    "            [i for i in range(self.model._num_network)], size=batch_size)\n",
+    "        batch_inds = np.arange(0, batch_size)\n",
+    "        samples = ensemble_samples[models_to_use, batch_inds]\n",
+    "        rewards, next_obs = samples[:, :1], samples[:, 1:]\n",
+    "        return rewards, next_obs\n",
+    "\n",
+    "    def propagate(self, obs, actions):\n",
+    "        with torch.no_grad():\n",
+    "            obs = np.copy(obs)\n",
+    "            total_reward = np.expand_dims(np.zeros(obs.shape[0]), axis=-1)\n",
+    "            obs, actions = torch.as_tensor(obs), torch.as_tensor(actions)\n",
+    "            for i in range(actions.shape[1]):\n",
+    "                action = torch.unsqueeze(actions[:, i], 1)\n",
+    "                rewards, next_obs = self.step(obs, action)\n",
+    "                total_reward += rewards\n",
+    "                obs = torch.as_tensor(next_obs)\n",
+    "            return total_reward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ReplayBuffer:\n",
+    "    def __init__(self, capacity):\n",
+    "        self.buffer = collections.deque(maxlen=capacity)\n",
+    "\n",
+    "    def add(self, state, action, reward, next_state, done, truncated):\n",
+    "        self.buffer.append((state, action, reward, next_state, done, truncated))\n",
+    "\n",
+    "    def size(self):\n",
+    "        return len(self.buffer)\n",
+    "\n",
+    "    def return_all_samples(self):\n",
+    "        all_transitions = list(self.buffer)\n",
+    "        state, action, reward, next_state, done, truncated = zip(*all_transitions)\n",
+    "        return np.array(state), action, reward, np.array(next_state), done, truncated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PETS:\n",
+    "    ''' PETS算法 '''\n",
+    "    def __init__(self, env, replay_buffer, n_sequence, elite_ratio,\n",
+    "                 plan_horizon, num_episodes):\n",
+    "        self._env = env\n",
+    "        self._env_pool = replay_buffer\n",
+    "\n",
+    "        obs_dim = env.observation_space.shape[0]\n",
+    "        self._action_dim = env.action_space.shape[0]\n",
+    "        self._model = EnsembleDynamicsModel(obs_dim, self._action_dim)\n",
+    "        self._fake_env = FakeEnv(self._model)\n",
+    "        self.upper_bound = env.action_space.high[0]\n",
+    "        self.lower_bound = env.action_space.low[0]\n",
+    "\n",
+    "        self._cem = CEM(n_sequence, elite_ratio, self._fake_env,\n",
+    "                        self.upper_bound, self.lower_bound)\n",
+    "        self.plan_horizon = plan_horizon\n",
+    "        self.num_episodes = num_episodes\n",
+    "\n",
+    "    def train_model(self):\n",
+    "        env_samples = self._env_pool.return_all_samples()\n",
+    "        obs = env_samples[0]\n",
+    "        actions = np.array(env_samples[1])\n",
+    "        rewards = np.array(env_samples[2]).reshape(-1, 1)\n",
+    "        next_obs = env_samples[3]\n",
+    "        inputs = np.concatenate((obs, actions), axis=-1)\n",
+    "        labels = np.concatenate((rewards, next_obs - obs), axis=-1)\n",
+    "        self._model.train(inputs, labels)\n",
+    "\n",
+    "    def mpc(self):\n",
+    "        mean = np.tile((self.upper_bound + self.lower_bound) / 2.0,\n",
+    "                       self.plan_horizon)\n",
+    "        var = np.tile(\n",
+    "            np.square(self.upper_bound - self.lower_bound) / 16,\n",
+    "            self.plan_horizon)\n",
+    "        obs, done, episode_return = self._env.reset(), False, 0\n",
+    "        while not done:\n",
+    "            actions = self._cem.optimize(obs, mean, var)\n",
+    "            action = actions[:self._action_dim]  # 选取第一个动作\n",
+    "            next_obs, reward, done, _ = self._env.step(action)\n",
+    "            self._env_pool.add(obs, action, reward, next_obs, done)\n",
+    "            obs = next_obs\n",
+    "            episode_return += reward\n",
+    "            mean = np.concatenate([\n",
+    "                np.copy(actions)[self._action_dim:],\n",
+    "                np.zeros(self._action_dim)\n",
+    "            ])\n",
+    "        return episode_return\n",
+    "\n",
+    "    def explore(self):\n",
+    "        obs, done, episode_return = self._env.reset(), False, 0\n",
+    "        while not done:\n",
+    "            action = self._env.action_space.sample()\n",
+    "            next_obs, reward, done, truncated, _ = self._env.step(action)\n",
+    "            self._env_pool.add(obs, action, reward, next_obs, done, truncated)\n",
+    "            obs = next_obs\n",
+    "            episode_return += reward\n",
+    "        return episode_return\n",
+    "\n",
+    "    def train(self):\n",
+    "        return_list = []\n",
+    "        explore_return = self.explore()  # 先进行随机策略的探索来收集一条序列的数据\n",
+    "        print('episode: 1, return: %d' % explore_return)\n",
+    "        return_list.append(explore_return)\n",
+    "\n",
+    "        for i_episode in range(self.num_episodes - 1):\n",
+    "            self.train_model()\n",
+    "            episode_return = self.mpc()\n",
+    "            return_list.append(episode_return)\n",
+    "            print('episode: %d, return: %d' % (i_episode + 2, episode_return))\n",
+    "        return return_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "buffer_size = 100000\n",
+    "n_sequence = 50\n",
+    "elite_ratio = 0.2\n",
+    "plan_horizon = 25\n",
+    "num_episodes = 10\n",
+    "env_name = 'Pendulum-v1'\n",
+    "env = gym.make(env_name)\n",
+    "\n",
+    "replay_buffer = ReplayBuffer(buffer_size)\n",
+    "pets = PETS(env, replay_buffer, n_sequence, elite_ratio, plan_horizon,\n",
+    "            num_episodes)\n",
+    "return_list = pets.train()\n",
+    "\n",
+    "episodes_list = list(range(len(return_list)))\n",
+    "plt.plot(episodes_list, return_list)\n",
+    "plt.xlabel('Episodes')\n",
+    "plt.ylabel('Returns')\n",
+    "plt.title('PETS on {}'.format(env_name))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -133,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
