--- a/强化学习笔记/16_行为预测控制.ipynb
+++ b/强化学习笔记/16_行为预测控制.ipynb
@@ -36,8 +36,7 @@
     "\n",
     "\n",
     "class CEM:\n",
-    "    def __init__(self, n_sequence, elite_ratio, fake_env, upper_bound,\n",
-    "                 lower_bound):\n",
+    "    def __init__(self, n_sequence, elite_ratio, fake_env, upper_bound, lower_bound):\n",
     "        self.n_sequence = n_sequence\n",
     "        self.elite_ratio = elite_ratio\n",
     "        self.upper_bound = upper_bound\n",
@@ -165,7 +164,7 @@
     "                 ensemble_size=5,\n",
     "                 learning_rate=1e-3):\n",
     "        super(EnsembleModel, self).__init__()\n",
-    "        # ? 输出包括均值和方差,因此是状态与奖励维度之和的两倍\n",
+    "        # ? 输出包括均值和方差, 因此是状态与奖励维度之和的两倍\n",
     "        self._output_dim = (state_dim + 1) * 2\n",
     "        self._max_logvar = nn.Parameter(\n",
     "            (torch.ones((1, self._output_dim // 2)).float() / 2).to(device),\n",
@@ -184,7 +183,7 @@
     "        self.optimizer = torch.optim.Adam(self.parameters(), lr=learning_rate)\n",
     "\n",
     "    def forward(self, x, return_log_var=False):\n",
-    "        # * 网络计算, 需要注意的是, 这里网络输出的是期望和方差\n",
+    "        # * 网络计算, 需要注意的是, 这里网络输出的是奖励\n",
     "        ret = self.layer5(self.layer4(self.layer3(self.layer2(self.layer1(x)))))\n",
     "        mean = ret[:, :, :self._output_dim // 2]\n",
     "        # 在PETS算法中, 将方差控制在最小值和最大值之间\n",
@@ -270,12 +269,9 @@
     "            ])\n",
     "            # 所有真实数据都用来训练\n",
     "            for batch_start_pos in range(0, train_inputs.shape[0], batch_size):\n",
-    "                batch_index = train_index[:,\n",
-    "                                          batch_start_pos:batch_start_pos + batch_size]\n",
-    "                train_input = torch.from_numpy(\n",
-    "                    train_inputs[batch_index]).float().to(device)\n",
-    "                train_label = torch.from_numpy(\n",
-    "                    train_labels[batch_index]).float().to(device)\n",
+    "                batch_index = train_index[:, batch_start_pos:batch_start_pos + batch_size]\n",
+    "                train_input = torch.from_numpy(train_inputs[batch_index]).float().to(device)\n",
+    "                train_label = torch.from_numpy(train_labels[batch_index]).float().to(device)\n",
     "\n",
     "                mean, logvar = self.model(train_input, return_log_var=True)\n",
     "                loss, _ = self.model.loss(mean, logvar, train_label)\n",
@@ -284,10 +280,7 @@
     "            # 验证集\n",
     "            with torch.no_grad():\n",
     "                mean, logvar = self.model(holdout_inputs, return_log_var=True)\n",
-    "                _, holdout_losses = self.model.loss(mean,\n",
-    "                                                    logvar,\n",
-    "                                                    holdout_labels,\n",
-    "                                                    use_var_loss=False)\n",
+    "                _, holdout_losses = self.model.loss(mean, logvar, holdout_labels, use_var_loss=False)\n",
     "                holdout_losses = holdout_losses.cpu()\n",
     "                break_condition = self._save_best(epoch, holdout_losses)\n",
     "                if break_condition or epoch > max_iter:  # 结束训练\n",
@@ -310,10 +303,8 @@
     "        '''预测'''\n",
     "        mean, var = [], []\n",
     "        for i in range(0, inputs.shape[0], batch_size):\n",
-    "            input = torch.from_numpy(\n",
-    "                inputs[i:min(i + batch_size, inputs.shape[0])]).float().to(device)\n",
-    "            cur_mean, cur_var = self.model(input[None, :, :].repeat([self._num_network, 1, 1]),\n",
-    "                                           return_log_var=False)\n",
+    "            input = torch.from_numpy(inputs[i:min(i + batch_size, inputs.shape[0])]).float().to(device)\n",
+    "            cur_mean, cur_var = self.model(input[None, :, :].repeat([self._num_network, 1, 1]), return_log_var=False)\n",
     "            mean.append(cur_mean.detach().cpu().numpy())\n",
     "            var.append(cur_var.detach().cpu().numpy())\n",
     "        return np.hstack(mean), np.hstack(var)  # 展平"
@@ -544,6 +535,17 @@
     "plt.ylabel(\"Returns\")\n",
     "plt.title(\"PETS on {}\".format(env_name))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 算法框架图\n",
+    "\n",
+    "第一次见这么复杂的。。。并没有完全搞清楚\n",
+    "\n",
+    "![PETS算法.jpg](https://s2.loli.net/2023/08/28/TPfkbxCWD5UH7ZA.jpg)"
    ]
   },
   {
