--- a/强化学习笔记/07_DQN.ipynb
+++ b/强化学习笔记/07_DQN.ipynb
@@ -81,7 +81,7 @@
     "    def forward(self, x):\n",
     "        x = F.elu(self.fc1(x))\n",
     "        x = F.elu(self.fc2(x))\n",
-    "        return self.fc3(x)"
+    "        return x"
    ]
   },
   {
