修改错误代码

--- a/强化学习笔记/07_DQN.ipynb
+++ b/强化学习笔记/07_DQN.ipynb
@@ -80,7 +80,7 @@
     "    \n",
     "    def forward(self, x):\n",
     "        x = F.elu(self.fc1(x))\n",
-    "        x = F.elu(self.fc2(x))\n",
+    "        x = self.fc2(x)\n",
     "        return x"
    ]
   },
