--- a/强化学习笔记/07_DQN.ipynb
+++ b/强化学习笔记/07_DQN.ipynb
@@ -199,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1f09370f230>"
+       "<torch._C.Generator at 0x1b848623210>"
       ]
      },
      "execution_count": 6,
@@ -307,18 +307,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                                                \r"
+      "<20/20>:   0%|          | 0/100 [00:00<?, ?it/s]"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<20/20>:  10%|█         | 10/100 [00:20<00:09,  9.53it/s, train_times=1910, recent_reward=98.1, episilon=0.01]"
+     ]
     }
    ],
    "source": [
