--- a/强化学习笔记/08_DQN改进.ipynb
+++ b/强化学习笔记/08_DQN改进.ipynb
@@ -21,8 +21,7 @@
     "import matplotlib.pyplot as plt\n",
     "import rl_utils\n",
     "import os\n",
-    "from tqdm import tqdm\n",
-    "import seaborn as sns"
+    "from tqdm import tqdm"
    ]
   },
   {
