Changes to be committed: 修改格式

--- a/强化学习笔记/13_DDPG.ipynb
+++ b/强化学习笔记/13_DDPG.ipynb
@@ -90,21 +90,16 @@
     "    def __init__(self, state_dim, hidden_dim, action_dim, action_bound,\n",
     "                 sigma, actor_lr, critic_lr, tau, gamma, device, training=True):\n",
     "        self.training = training\n",
-    "        self.actor = PolicyNet(state_dim, hidden_dim,\n",
-    "                               action_dim, action_bound).to(device)\n",
+    "        self.actor = PolicyNet(state_dim, hidden_dim, action_dim, action_bound).to(device)\n",
     "        self.critic = QValueNet(state_dim, hidden_dim, action_dim).to(device)\n",
-    "        self.target_actor = PolicyNet(\n",
-    "            state_dim, hidden_dim, action_dim, action_bound).to(device)\n",
-    "        self.target_critic = QValueNet(\n",
-    "            state_dim, hidden_dim, action_dim).to(device)\n",
+    "        self.target_actor = PolicyNet(state_dim, hidden_dim, action_dim, action_bound).to(device)\n",
+    "        self.target_critic = QValueNet(state_dim, hidden_dim, action_dim).to(device)\n",
     "        # 初始化目标价值网络并设置和价值网络相同的参数\n",
     "        self.target_critic.load_state_dict(self.critic.state_dict())\n",
     "        # 初始化目标策略网络并设置和策略相同的参数\n",
     "        self.target_actor.load_state_dict(self.actor.state_dict())\n",
-    "        self.actor_optimizer = torch.optim.Adam(\n",
-    "            self.actor.parameters(), lr=actor_lr)\n",
-    "        self.critic_optimizer = torch.optim.Adam(\n",
-    "            self.critic.parameters(), lr=critic_lr)\n",
+    "        self.actor_optimizer = torch.optim.Adam(self.actor.parameters(), lr=actor_lr)\n",
+    "        self.critic_optimizer = torch.optim.Adam(self.critic.parameters(), lr=critic_lr)\n",
     "        self.gamma = gamma\n",
     "        self.sigma = sigma  # 高斯噪声的标准差, 均值直接设为0\n",
     "        self.tau = tau  # 目标网络软更新参数\n",
@@ -112,8 +107,7 @@
     "        self.device = device\n",
     "\n",
     "    def take_action(self, state):\n",
-    "        state = torch.tensor(\n",
-    "            np.array(state), dtype=torch.float).to(self.device)\n",
+    "        state = torch.tensor(np.array(state), dtype=torch.float).to(self.device)\n",
     "        action = self.actor(state).item()  # * 在这里和网络分离了, 因此后面不需要.item()\n",
     "        if self.training:\n",
     "            # 给动作添加噪声，增加探索, 但是验证和测试时不需要\n",
