--- a/机器学习笔记/18_强化学习.ipynb
+++ b/机器学习笔记/18_强化学习.ipynb
@@ -805,7 +805,7 @@
     "                ]\n",
     "            )\n",
     "\n",
-    "history1 = np.array(history1)  # 整理历史信息\n"
+    "history1 = np.array(history1)  # 整理历史信息"
    ]
   },
   {
