--- a/机器学习笔记/X_02_草稿.ipynb
+++ b/机器学习笔记/X_02_草稿.ipynb
@@ -68,6 +68,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "4\n",
+      "2\n",
+      "15\n",
+      "6\n",
+      "14\n",
+      "16\n",
+      "17\n",
+      "19\n",
+      "1\n",
+      "12\n",
+      "11\n",
+      "8\n",
+      "10\n",
+      "9\n",
+      "5\n",
+      "13\n",
+      "20\n",
+      "18\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import time\n",
+    "\n",
+    "# 生成1到22的数字列表\n",
+    "numbers = list(range(1, 21))\n",
+    "\n",
+    "# 使用random模块的shuffle函数进行随机排序\n",
+    "random.shuffle(numbers)\n",
+    "\n",
+    "# 输出排序后的数字列表\n",
+    "for number in numbers:\n",
+    "    time.sleep(1)\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
