--- a/强化学习笔记/16_行为预测控制.ipynb
+++ b/强化学习笔记/16_行为预测控制.ipynb
@@ -428,7 +428,7 @@
     "        rewards = np.array(env_samples[2]).reshape(-1, 1)\n",
     "        next_obs = env_samples[3]\n",
     "        inputs = np.concatenate((obs, actions), axis=-1)\n",
-    "        labels = np.concatenate((rewards, next_obs - obs), axis=-1)\n",
+    "        labels = np.concatenate((rewards, next_obs - obs), axis=-1) # ? 为什么是 next_obs - obs\n",
     "        self._model.train(inputs, labels)\n",
     "\n",
     "    def mpc(self):\n",
@@ -438,16 +438,13 @@
     "        obs, done, truncated, episode_return = self._env.reset()[0], False, False, 0\n",
     "        while not (done | truncated):\n",
     "            actions = self._cem.optimize(obs, mean, var)  # 返回动作序列的均值\n",
-    "            action = actions[:self._action_dim]  # 选取第一个动作\n",
+    "            action = actions[:self._action_dim]\n",
     "            next_obs, reward, done, truncated, _ = self._env.step(action)\n",
     "            self._env_pool.add(obs, action, reward, next_obs, done, truncated)\n",
     "            obs = next_obs\n",
     "            episode_return += reward\n",
     "            # np.concatenate([a, b]) 横向拼接\n",
-    "            mean = np.concatenate([\n",
-    "                np.copy(actions)[self._action_dim:],\n",
-    "                np.zeros(self._action_dim)\n",
-    "            ])\n",
+    "            mean = np.concatenate([np.copy(actions)[self._action_dim:], np.zeros(self._action_dim)])\n",
     "        return episode_return\n",
     "\n",
     "    def explore(self):\n",
