无特殊修改

--- a/强化学习笔记/10_Actor-Critic.ipynb
+++ b/强化学习笔记/10_Actor-Critic.ipynb
@@ -151,23 +151,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 评论员网络，也就是价值网络V，采用类似DQN的方式更新参数，即估计的本轮Q值往(本轮奖励+估计的下一轮Q值)的方向更新\n",
+    "优势函数的思想在 Dueling DQN 中已经提到过了，那里需要 Q 值，所以把 $A = Q - V​​$ 变成 $Q=V+A$，其中 A 也是由 Q 网络的一部分估计的，这里是改进的优势函数，需要的就是 $A = Q - V​​$，其中 Q 来自演员网络，V 来自评论员网络。\n",
     "\n",
-    "* 演员网络，即策略网络，用类似梯度策略的方式更新，即动作的概率乘以优势函数A，优势函数原本是每轮以及后续获得的奖励（折算后的，称为G）减去一个基线b，也就是$A = G-b$，但是$E(G) = Q_{\\pi_{\\theta}}(s^n_t,a^n_t)$，而b一般是状态价值函数$V_{\\pi_{\\theta}}(s_t)$，因此优势函数变成\n",
+    "目标函数就是动作的概率乘以优势函数 A，即 $log\\_prob(action)* A$，**推导待补充**，优势函数原本是每轮以及后续获得的折算奖励（G）减去一个基线 b，也就是 $A = G-b$，但是这个折算是比较麻烦的，因为有 $E(G) = Q_{\\pi_{\\theta}}(s^n_t,a^n_t)$，所以可以考虑用 Q 替代 G，而 $b$ 一般是状态价值函数 $V_{\\pi_{\\theta}}(s_t)$，因此优势函数变成\n",
+    "$$A = Q_{\\pi_{\\theta}}(s^n_t,a^n_t)-V_{\\pi_{\\theta}}(s_t)$$\n",
+    "可以用 V 来估计 Q，即有 $Q_{\\pi}(s^n_t,a^n_t)=E(r_t^n+V_{\\pi_{\\theta}}(s_{t+1}))$ ，把这个式子带入上式，并且这里先去掉期望，所以有\n",
+    "$$A^{\\theta}\\left(s_t,a_t\\right) = r_t^n+V_{\\pi}(s_{t+1}^n) - V_{\\pi}(s_t)$$\n",
+    "期望值很难算，经过多次实验，去掉期望值容易计算，并且效果还可以，因此在这里一般就去掉期望，带入最开始给的优势函数。\n",
     "\n",
-    "    $Q_{\\pi_{\\theta}}(s^n_t,a^n_t)-V_{\\pi_{\\theta}}(s_t)$\n",
-    "\n",
-    "    同时有$E(Q_{\\pi}(s^n_t,a^n_t))=V_{\\pi_{\\theta}}(s_t)$, 又$Q$存在$Q_{\\pi}(s^n_t,a^n_t) = r_t^n+Q_{\\pi}(s_{t+1}^n,a_{t+1}^n)$\n",
-    "    \n",
-    "    因此（后面省去参数$\\theta$角标）\n",
-    "\n",
-    "    $Q_{\\pi}(s^n_t,a^n_t) = r_t^n+Q_{\\pi}(s_{t+1}^n,a_{t+1}^n) = E(r_t^n+V_{\\pi}(s_{t+1}^n))$\n",
-    "\n",
-    "    期望值很难算，经过多次实验，去掉期望值容易计算，并且效果好，因此在这里一般就去掉期望，最终优势A就变成\n",
-    "\n",
-    "    $r_t^n+V_{\\pi}(s_{t+1}^n) - V_{\\pi_{\\theta}}(s_t)$\n",
-    "\n",
-    "    在代码里面优势G就是`td_delta`, 再乘以负的概率的对数，就等于演员网络的损失，对其参数求梯度，就实现梯度上升"
+    "这样是很容易代码实现的。在代码里面，优势 G 就是 `td_delta`，再乘以负的动作概率的对数，就等于演员网络的损失，对其参数求梯度，就实现梯度上升。"
    ]
   },
   {
@@ -322,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
