--- a/强化学习笔记/13_DDPG.ipynb
+++ b/强化学习笔记/13_DDPG.ipynb
@@ -123,8 +123,7 @@
     "        target_net : torch.nn.module\n",
     "        '''\n",
     "        for param_target, param in zip(target_net.parameters(), net.parameters()):\n",
-    "            param_target.data.copy_(\n",
-    "                param_target.data * (1.0 - self.tau) + param.data * self.tau)\n",
+    "            param_target.data.copy_(param_target.data * (1.0 - self.tau) + param.data * self.tau)\n",
     "\n",
     "    def update(self, transition_dict):\n",
     "        states = torch.tensor(\n",
